force-app/main/default/objects/CampaignMember/fields/DS_Packages__Cadence_Member__c.field-meta.xml
<CustomField>
    <fullName>DS_Packages__Cadence_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Member</label>
    <referenceTo>DS_Packages__Cadence_Member__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>