force-app/main/default/objects/CampaignMember/fields/UTM_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_Most_Recent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM Source - Most Recent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>