force-app/main/default/objects/CampaignMember/validationRules/Prevent_Additional_Members.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Additional_Members</fullName>
    <active>true</active>
    <description>Once an E-list campaign is active prevent more members from being added.</description>
    <errorConditionFormula>AND( ISNEW() , Campaign.IsActive , Campaign.Parent.Name= &apos;Parent Sales Rep E-List&apos;, Not( BEGINS($Profile.Name, &apos;System Administrator&apos;)) )</errorConditionFormula>
    <errorMessage>Once the Active checkbox is checked, the list has been sent to NSS and members can no longer be added. Please create a new Campaign and add your additional members to the new Campaign.</errorMessage>
</ValidationRule>